add_subdirectory(anime)
add_subdirectory(cli)
add_subdirectory(corort)
add_subdirectory(eglctx)
add_subdirectory(gamepad)
add_subdirectory(geom)
add_subdirectory(gles2)
add_subdirectory(img)
add_subdirectory(memtricks)
add_subdirectory(sfx)
add_subdirectory(sync)
add_subdirectory(wlwnd)
add_subdirectory(xdg)
